--- a/index.html
+++ b/index.html
@@ -1,30 +1,30 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="/css/style.css" />
-    <title>YOUR NAME</title>
+    <link rel="stylesheet" href="style.css" />
+    <title>Austin Kim</title>
     <meta name="description" content="some desc">
   </head>
 
   <body>
     <header class="main-header">
       <br>
-      <h1 class="my-name my-name-large">YOUR NAME</h1>
+      <h1 class="my-name my-name-large">Austin Kim</h1>
     </header>
     <br><br><br>
     <section class="content-section container">
       <h2 class="section-header">About Me</h2>
-      <img class="about-prof-image" src="/assets/profile.png" height="200" width="200">
-      <p> INTRODUCE YOURSELF
+      <img class="about-prof-image" src="profile.png" height="200" width="200">
+      <p> I am the best. My favourite fruit is watermelon. I live in San Francisco.
 
       </p>
 
       <p>
-        Relevant Info
+        Korean. Born in LA.
       </p>
 
       <p>
-        your interests
+        Bitcoin to the moon. 
       </p>
 
       <br><br><br><br><br><br><br><br><br><br><br>
@@ -35,20 +35,25 @@
         <ul class="nav footer-nav">
           <li>
             <!-- YOUR GITHUB -->
-            <a href="https://github.com/" target="_blank">
-              <img class="sm-logo" src="/assets/githubwhite.png" height="50" width="50">
+            <a href="https://github.com/kimboss1004" target="_blank">
+              <img class="sm-logo" src="githubwhite.png" height="50" width="50">
             </a>
           </li>
           <li>
             <!-- YOUR LINKEDIN -->
             <a href="https://www.linkedin.com/" target="_blank">
-              <img class="sm-logo" src="/assets/linkedinwhite.png" height="50" width="50">
+              <img class="sm-logo" src="linkedinwhite.png" height="50" width="50">
 
             </a>
           </li>
           <li>
             <a href="https://www.cs.umd.edu/" target="_blank">
-              <img src="/assets/umd-logo.png" height="34" width="195">
+              <img src="umd-logo.png" height="34" width="195">
+            </a>
+          </li>
+          <li>
+            <a href="https://www.youtube.com/" target="_blank">
+              <img src="umd-logo.png" height="34" width="195">
             </a>
           </li>
 
