added link image

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           </li>
           <li>
             <!-- YOUR LINKEDIN -->
-            <a href="https://www.linkedin.com/" target="_blank">
+            <a href="https://www.linkedin.com/in/austin-k-5b3449105/" target="_blank">
               <img class="sm-logo" src="linkedinwhite.png" height="50" width="50">
 
             </a>
@@ -53,7 +53,7 @@
           </li>
           <li>
             <a href="https://www.youtube.com/" target="_blank">
-              <img src="umd-logo.png" height="34" width="195">
+              <img src="utube.png" height="34" width="195">
             </a>
           </li>
 
